syntax = "proto3";
package comms;

option go_package = "github.com/CodeZeo/T3-SD/Lab3_SD/comms";

message Conn {
    string ip = 1;
}

message Empty {
    // No poner nada, est√° asi a proposito
}

message Command {
    string c = 1;
}

message LocateCity {
    string nombrePlaneta = 1;
    string nombreCiudad = 2;
}

message NumberRebelds{
    int32 nR = 1;
}

message NumberRebeldsClock{
    int32 nR = 1;
    int32 x = 2;
    int32 y = 3;
    int32 z = 4;
    string ip = 5;
}

message DataCity {
    string nombre_planeta = 1;
    string nombre_ciudad = 2;
    int32 nuevo_valor = 3; // 0 si es que no se escribe uno
}

message ChangeNameCity {
    string nombre_planeta = 1;
    string nombre_ciudad = 2;
    string nuevo_nombre = 3;
}

message clock {
    int32 x = 1;
    int32 y = 2;
    int32 z = 3;
}

message Planet {
    string planet = 1;
}

service Broker {
    rpc getIP(Command) returns (Conn){}
    rpc getNumberRebelds(LocateCity) returns (NumberRebeldsClock){}
}

service Fulcrum {
    rpc returnNumberRebelds(LocateCity) returns (NumberRebelds){}
    rpc addCity(DataCity) returns (clock){}
    rpc updateName(ChangeNameCity) returns (clock){}
    rpc updateNumber(DataCity) returns (clock){}
    rpc deleteCity(LocateCity) returns (clock){}
    rpc getClock(Planet) returns (clock){}
}
